Revision history for MIDI-Tweaks

0.04    Date/time
	Add MIDI::Tweaks::Opus::change_tempo.
	Improve program logic and docs.

0.03    2008-07-02 14:21
	Improve program logic and docs.
	Make less obfuscated by using better variable names.

0.02    2008-06-25 16:47
	Removed the use of "package MIDI::Track" since that is
	prohibited by the CPAN indexer.

0.01    2008-06-25 10:27
        First version, released on an unsuspecting world.
